--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@formkit/vue": "^0.16.5",
     "atropos": "^1.0.2",
     "axios": "^1.4.0",
+    "maska": "^2.1.9",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
